--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,6 +6,10 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
+
+    <h1>Testing: <%= @line_item.quantity %>
+      <%= @product.name %>
+    </h1>
   </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
