--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -8,10 +8,36 @@
     <h4>Thank you for your order!</h4>
     <h5>Email used: </h5><%= @order.email %><br>
 
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th colspan="2">Product Name</th>
+          <th>Description</th>
+          <th>Quantity Ordered</th>
+          <th>Total Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @order.line_items.each do |line_item| %>
+          <%= render 'line_item', line_item: line_item %>
+        <% end %>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="3">
+          </th>
+          <th>
+            TOTAL:
+          </th>
+          <th>
+            total dollah
+          </th>
+        </tr>
+      </tfoot>
+    </table>
+
     <tbody>
-      <% @order.line_items.each do |line_item| %>
-        <%= render 'line_item', line_item: line_item %>
-      <% end %>
+
     </tbody>
   </div>
 
