--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,10 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if enhanced_cart.count == 0 %>
+    <h1>Yo your cart is empty dum dum</h1>
+    <%= link_to 'Products', products_path %>
+  <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +52,6 @@
       <% end %>
     </div>
   </div>
+  <% end %>
 
 </section>
