--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
-    <h5>Email used: </h5><%= @order.email %><br>
+    <h5>Email used: </h5><%= @user.email %><br>
 
     <table class="table table-bordered">
       <thead>
