--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,12 +6,13 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
-    <h5>Email used: </h5><%= @user.email %><br>
+    <h5>Email used: </h5><%= @user.email %>
+  </div>
 
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th colspan="2">Product Name</th>
+          <th>Product Name</th>
           <th>Description</th>
           <th>Quantity Ordered</th>
           <th>Total Price</th>
@@ -24,22 +25,17 @@
       </tbody>
       <tfoot>
         <tr>
-          <th colspan="3">
+          <th colspan="2">
           </th>
           <th>
             TOTAL:
           </th>
           <th>
-            total dollah
+          <%= number_to_currency(@order.total_cents/100) %>
           </th>
         </tr>
       </tfoot>
     </table>
-
-    <tbody>
-
-    </tbody>
-  </div>
 
   <%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
 
